[package]
name = "replayskimmer"
version = "0.1.0"
authors = ["PizzaCrust <pizzacrustcoder@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
bincode = { path = "bincode" }
serde = { version = "1.0.114", features = ["derive"] }
byteorder = "1.3.4"
serde_bytes = "0.11"
hex = "0.4.2"
aes-soft = "0.5.0"
block-modes = "0.6.0"
libloading = "0.6.2"